--- a/gb/18/7/26/n10592217.md
+++ b/gb/18/7/26/n10592217.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jmzkba221/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jmzkba221/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jmzkba221/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jmzkba221/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jmzkba221/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jmzkba221/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jmzkba221/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jmzkba221/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jmzkba221/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jmzkba221/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jmzkba221/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jmzkba221/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jmzkba221/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jmzkba221/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jmzkba221/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jmzkba221/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/jmzkba221/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/jmzkba221/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jmzkba221/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/jmzkba221/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jmzkba221/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jmzkba221/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yirpaj3429/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中共迫害老百姓的犯罪手段——绑架</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/07/743aae0573fd736e03ae53cb31d1df14-600x400.png" />
 <h6>绘画：中共的暴力绑架。（明慧网）
 </h6>
 <hr>
-<p>【大纪元2018年07月26日讯】（大纪元记者罗琼综合报导）中共自1999年7月20日迫害<ahref="https://github.com/jmzkba221/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>以来，使用犯罪手段——绑架，把难以数计的法轮功学员关进洗脑班、劳教所、看守所、拘留所、精神病院、监狱等进行迫害。</p>
+	<p>【大纪元2018年07月26日讯】（大纪元记者罗琼综合报导）中共自1999年7月20日迫害<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>以来，使用犯罪手段——绑架，把难以数计的法轮功学员关进洗脑班、劳教所、看守所、拘留所、精神病院、监狱等进行迫害。</p>
 <p>根据《中华人民共和国刑法》第239条规定， 绑架罪是指勒索财物或者其它目的，使用暴力、胁迫或者其它方法，绑架他人的行为，或者绑架他人作为人质的行为。</p>
 <p>其中规定：杀害被绑架人的，或者故意伤害被绑架人，致人重伤、死亡的，处无期徒刑或者死刑，并处没收财产。</p>
-<p>然而讽刺的是，众多案例证实，中共对成千上万的<ahref="https://github.com/jmzkba221/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员犯下“绑架罪”。</p>
+<p>然而讽刺的是，众多案例证实，中共对成千上万的<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员犯下“绑架罪”。</p>
 <p>很多公检法官员甚至公开叫嚣，对法轮功学员，不用讲法律，想怎么收拾就怎么收拾。例如，西昌市政法委副书记刘某公然对法轮功学员辩护律师称：“不要跟我讲法律，我们不讲法律。”铁岭市国保大队长谢祥军对法轮功学员张英东说：“共产党对法轮功从来就不讲法律！”</p>
 <p>2017年2月1日，52岁的华裔加拿大籍富商孙茜被北京公共安全保卫分局及北京朝阳区大屯派出所非法从家中绑架，后被非法批捕，北京朝阳检察院两次退补后，被非法追诉。</p>
 <p>加拿大从政要、媒体到民众各界人士都在营救孙茜。前加拿大参议员迪尼诺（Consiglio Di Nino）出席今年加拿大法轮功学员举行的“7·20”反迫害的集会并发言说：“基本权利及自由没有国界，它不讲具体的语言，也不跟从任何政治或其它团体，它是一种地球上人类的基本原则。在拒绝给予中国人这些自由方面，中共是最恶劣的犯罪分子。不幸的是，它甚至越过了中国的国界。”</p>
@@ -29,7 +29,7 @@
 <p>2017年3月13日，山东省寿光市城里村刘洪君在去朋友家回来的路上，被寿光国保大队长张洪伟、杨义贵伙同纪台多名警察绑架到寿光纪台派出所。他们对他刑讯逼供，并朝其脸上喷辣椒水，后将他劫持到寿光看守所。他于同年11月遭冤判三年。</p>
 <p>山东省烟台市海阳市发城镇村芦头泉村的法轮功学员范翠珍多年在青岛打工，2018年3月29日早上7点左右，她在上班路上被蹲点的警察绑架。之后大约六个警察胁迫她回家敲开出租房，非法抢劫了她家中两台电脑等。她被劫持到看守所。</p>
 <p>2018年4月23日，武汉市法轮功学员蔡满意在早晨上班的路上被江汉区“610”人员劫持。当日，江汉区北湖街派出所警察闯入她家中，绑架了她的丈夫鲍裕农。</p>
-<figure id="attachment_10592518" style="width: 350px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/07/2018-6-6-wuhan-image001-ss-1.jpg"><img class="size-full wp-image-10592518 aligncenter" src="https://i.epochtimes.com/assets/uploads/2018/07/2018-6-6-wuhan-image001-ss-1.jpg" alt="" width="350" b="233" /></a><figcaption class="wp-caption-text">（明慧网）</figcaption></figure>
+<figure id="attachment_10592518" aria-describedby="caption-attachment-10592518" style="width: 350px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/07/2018-6-6-wuhan-image001-ss-1.jpg"><img class="size-full wp-image-10592518 aligncenter" src="https://i.epochtimes.com/assets/uploads/2018/07/2018-6-6-wuhan-image001-ss-1.jpg" alt="" width="350" b="233" /></a><figcaption id="caption-attachment-10592518" class="wp-caption-text">（明慧网）</figcaption></figure>
 <p>两人至今被关押在臭名昭著的武汉市“玉笋山洗脑班”。</p>
 <h2>骗开门</h2>
 <p>警察会以各种谎言把门骗开，闯进去后抄家，抢劫钱、私人用品，最后将法轮功学员劫持走。他们不出示任何证件，有些身着便衣；骗不开门，就砸门、撬门等。</p>
@@ -42,7 +42,7 @@
 <h3>谎称没交水电费</h3>
 <p>2017年3月22日下午3点多，十来个便衣警察，利用郝明媚的房东谎称没交水电费，骗开房门，未出示任何证件绑架了她，并非法抄家，抄走笔记本电脑等私人物品。</p>
 <p>警察是由黑龙江省公安厅国保处主任杨波、大庆国保支队队长冯海波指使的。之后郝明媚被非法起诉、庭审。</p>
-<figure id="attachment_10592460" style="width: 350px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/07/2017-5-24-mh-daqing-haomingmei-1-ss.jpg"><img class="size-full wp-image-10592460" src="https://i.epochtimes.com/assets/uploads/2018/07/2017-5-24-mh-daqing-haomingmei-1-ss.jpg" alt="" width="350" b="262" /></a><figcaption class="wp-caption-text">郝明媚（明慧网）</figcaption></figure>
+<figure id="attachment_10592460" aria-describedby="caption-attachment-10592460" style="width: 350px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/07/2017-5-24-mh-daqing-haomingmei-1-ss.jpg"><img class="size-full wp-image-10592460" src="https://i.epochtimes.com/assets/uploads/2018/07/2017-5-24-mh-daqing-haomingmei-1-ss.jpg" alt="" width="350" b="262" /></a><figcaption id="caption-attachment-10592460" class="wp-caption-text">郝明媚（明慧网）</figcaption></figure>
 <h3>找兽医为名</h3>
 <p>2017年12月21日夜，秦皇岛昌黎县公安局国保大队长高接力与新集派出所的警察，到新集镇桃园村兽医、法轮功学员张合民的家。警察以找兽医为名，骗开门，将张合民绑架。之后，他遭非法批捕、庭审。</p>
 <h2>破门而入</h2>
@@ -50,7 +50,7 @@
 <h3>八九个警察破门闯入 大学教师被殴打</h3>
 <p>2014年8月1日上午，家住吉林市高新区的吉林省北华大学教师魏修娟一人在家。吉林市高新区长江街派出所的七八个男警察和一个女警破门而入。其中一个上来就殴打她，将她的嘴用透明胶带封上。</p>
 <p>警察开始在她家里到处乱翻，打人的那个警察挑着魏修娟的下巴说：“我经常抓杀人犯，信不信我敲碎你骨头？”又拿着一本《九评共产党》书，指着说：“我今天就让你看看共产党的暴政！”接着又把她双手反背着戴上手铐，拖到另一个卧室里。</p>
-<figure id="attachment_10592279" style="width: 350px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/07/2018-4-29-mh-weixiujuan-2-ss-1.jpg"><img class="size-full wp-image-10592279" src="https://i.epochtimes.com/assets/uploads/2018/07/2018-4-29-mh-weixiujuan-2-ss-1.jpg" alt="" width="350" b="237" /></a><figcaption class="wp-caption-text">魏修娟（明慧网）</figcaption></figure>
+<figure id="attachment_10592279" aria-describedby="caption-attachment-10592279" style="width: 350px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/07/2018-4-29-mh-weixiujuan-2-ss-1.jpg"><img class="size-full wp-image-10592279" src="https://i.epochtimes.com/assets/uploads/2018/07/2018-4-29-mh-weixiujuan-2-ss-1.jpg" alt="" width="350" b="237" /></a><figcaption id="caption-attachment-10592279" class="wp-caption-text">魏修娟（明慧网）</figcaption></figure>
 <p>魏修娟在恐惧与屈辱中晕倒后，被拖到大厅里。她极度虚弱，无法站立，被警察硬薅着头发拎起来，由两个警察架着拎下楼，塞进车里，拖到医院体检，检查结果为：心律不齐，心绞痛，血压高等。之后她被关进一个小黑屋里，被铐在铁椅子上，当天下午就被送进洗脑班，后来被非法庭审。</p>
 <h3>电钻钻门 76岁老太被押上警车</h3>
 <p>2018年1月16日11点左右，大连76岁的法轮功学员王秀香租住的房屋有人敲门，家人没有开门。大约敲了半个小时后，来人开始用电钻钻门。几分钟之后，两男一女破门而入。女的手里拿着录像机，一直录像。</p>
@@ -77,49 +77,46 @@
 <p>“警察绑架法轮功学员比黑帮土匪绑架人质有过之而无不及。残忍暴虐、执法犯法、无法无天的程度只有普通百姓想不到的，没有他们做不到的。难怪百姓中流传着‘过去土匪在深山，现在土匪在公安’。”亲身经历过被绑架的法轮功学员如是说。（见报导《大量绑架事件是中共警察在干》）#</p>
 <p>资料来源：明慧网</p>
 <p>责任编辑：高静</p>
-
+	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/18/6/10/n10472309.md#1">上合峰会前 山东潍坊156法轮功学员被绑架</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/17/3/9/n8892512.md#1">今年1月份大陆412名法轮功学员遭绑架</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/16/12/17/n8602686.md#1">11月份大陆756位法轮功学员被绑架</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/16/11/25/n8529058.md#1">10月份大陆574位法轮功学员被中共绑架</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/16/8/17/n8211303.md#1">7月4位法轮功学员被迫害致死 883人遭绑架</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/16/8/1/n8155925.md#1">石铭：辽宁江派余孽的疯狂反扑</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/16/7/22/n8128500.md#1">诚宇：中共的株连式绑架迫害</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/12/6/9/n3608736.md#1">【纪实报告】2011年10月黑龙江双城特大绑架案</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/12/6/9/n3608736.md#1">【纪实报告】2011年10月黑龙江双城特大绑架案</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/7/22/n8128500.md#1">诚宇：中共的株连式绑架迫害</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/8/1/n8155925.md#1">石铭：辽宁江派余孽的疯狂反扑</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/8/17/n8211303.md#1">7月4位法轮功学员被迫害致死 883人遭绑架</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935263.md#1">澳医学协会西澳主席：学校将关闭</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/12/n11584537.md#1" target="_blank">颜智华：中国特大饥荒60周年祭（二）</a></li><li><a href="https://github.com/jmzkba221/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/14/n11383793.md#1" target="_blank">德国小伙修炼法轮功 戒毒戒烟获新生</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/28/n10179177.md#1" target="_blank">名为开放实为开抢的邓小平理论 (上)</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/11/1/21/n3149437.md#1" target="_blank">追查国际关于天安门自焚伪案十年说明</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/16/n11945338.md#1">外国疫情已失控？小粉红煽动回国被恶搞</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/15/n11942860.md#1">【最新疫情3.16】旧金山地区700万人居家防疫</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/15/n11942373.md#1">图证蝗虫大军肆虐 中共急定预案恐难应对</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/14/n11940769.md#1">【新闻看点】病毒来自哪里？川普：中美都知道</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/15/n11942229.md#1">大陆原卫生高官：疫情恐再爆发 谎言将破灭</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/16/n11945355.md#1">疫情影响无法开业 山东商户吁减租遭暴力抓捕</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/16/n11945531.md#1">武汉人斥官员：给你改正机会 谁给我活命机会</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/17/n11945922.md#1">【拍案惊奇】武汉肺炎病毒被曝恐有夺命亚型</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
-<li><a href="https://github.com/jmzkba221/djy/blob/master/gb/20/3/16/n11943288.md#1">古巨基宣布当爸 晒宝宝合照分享喜悦</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/jmzkba221/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/jmzkba221/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/7/26/n10592217.htm">中共迫害老百姓的犯罪手段——绑架</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/7/26/n10592217.htm">中共迫害老百姓的犯罪手段——绑架</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/jmzkba221/djy/blob/master/gb/18/7/26/n10592217.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jmzkba221/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jmzkba221/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jmzkba221/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jmzkba221/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jmzkba221/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yirpaj3429/djy/blob/master/gb/18/7/26/n10592217.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
